--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <br>
 
 
-<img src="img/drumpf.jpg">
+<img src="drumpf.jpg">
 
 
 <br>
@@ -78,7 +78,7 @@
 
 <div style="position: absolute; left: 5%; top: 82%;  padding: 1em; z-index:3">
 
-<a href="img/trombi.jpg">La team</a>
+<a href="trombi.jpg">La team</a>
  </div>
 
 <div style="position: absolute; left: 5%; top: 87%;  padding: 1em; z-index:3">
@@ -87,7 +87,7 @@
  </div>
  
  
- <a href="https://www.facebook.com/Unmoissurdeux/"><img src="img/logoBDE.png" style="position: absolute; left: 6%; top: 4%;"></a>
+ <a href="https://www.facebook.com/Unmoissurdeux/"><img src="logoBDE.png" style="position: absolute; left: 6%; top: 4%;"></a>
  
 </div>
 
