--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
 
 <div style="position: absolute; left: 5%; top: 82%;  padding: 1em; z-index:3">
 
-<a href="https://raw.githubusercontent.com/1moissur2/1moissur2.github.io/master/trombi.jpg">La team</a>
+<a href="https://raw.githubusercontent.com/1moissur2/1moissur2.github.io/master/Trombi.jpg">La team</a>
  </div>
 
 <div style="position: absolute; left: 5%; top: 87%;  padding: 1em; z-index:3">
 
-<a href="https://raw.githubusercontent.com/1moissur2/1moissur2.github.io/master/trombi.html">Programme</a>
+<a href="https://raw.githubusercontent.com/1moissur2/1moissur2.github.io/master/programme.html">Programme</a>
  </div>
  
  
- <a href="https://www.facebook.com/Unmoissurdeux/"><img src="https://raw.githubusercontent.com/1moissur2/1moissur2.github.io/master/logoBDE.png" style="position: absolute; left: 6%; top: 4%;"></a>
+ <a href="https://www.facebook.com/Unmoissurdeux/"><img src="https://raw.githubusercontent.com/1moissur2/1moissur2.github.io/master/LogoBDE.png" style="position: absolute; left: 6%; top: 4%;"></a>
  
 </div>
 
